BUG de FPS en TRAINING BUG de REGEN KI en TRAINING Gestion INVULNERABLE plus complète Affichage de INVULNERABLE en TRAINING

--- a/src/pages/index/_scenes/_training/_data.html
+++ b/src/pages/index/_scenes/_training/_data.html
@@ -13,6 +13,10 @@
                 <span>Frames</span>
                 <span class="outputText --change"></span>
             </li>
+            <li  class="Training__Data_Info">
+                <span>Invulnerability</span>
+                <span class="outputText --change"></span>
+            </li>
             <li class="Training__Data_Info">
                 <span>Entity</span>
                 <span class="outputText --change"></span>
